k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-latest
  namespace: restaurant-app
  labels:
    app: backend
    version: latest
spec:
  replicas: 1 # No canary for backend
  selector:
    matchLabels:
      app: backend
      version: latest
  template:
    metadata:
      labels:
        app: backend
        version: latest
    spec:
      imagePullSecrets:
        - name: docker-hub-creds
      containers:
        - name: backend
          image: docker.io/immrbhattarai/restaurant-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4000
              name: http
          resources:
            requests:
              cpu: "30m"
              memory: "64Mi"
            limits:
              cpu: "150m"
              memory: "128Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
