k8s/frontend-v1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-v1
  namespace: restaurant-app
  labels:
    app: frontend
    version: v1
spec:
  replicas: 2  # 66% of controlled traffic to v1
  selector:
    matchLabels:
      app: frontend
      version: v1
  template:
    metadata:
      labels:
        app: frontend
        version: v1
    spec:
      containers:
        - name: frontend
          image: docker.io/immrbhattarai/restaurant-frontend:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: "20m"
              memory: "32Mi"
            limits:
              cpu: "100m"
              memory: "64Mi"
