k8s/frontend-v3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-v3
  namespace: restaurant-app
  labels:
    app: frontend
    version: v3
spec:
  replicas: 1  # Canary: 33% of controlled traffic to new version, small traffic test
  selector:
    matchLabels:
      app: frontend
      version: v3
  template:
    metadata:
      labels:
        app: frontend
        version: v3
    spec:
      containers:
        - name: frontend
          image: docker.io/immrbhattarai/restaurant-frontend:v3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              cpu: "20m"
              memory: "32Mi"
            limits:
              cpu: "100m"
              memory: "64Mi"
