k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: restaurant-app
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          # Very small resources to keep GKE node light
          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              cpu: "300m"
              memory: "1024Mi"
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data_mount
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pvc
