k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restaurant-ingress
  namespace: restaurant-app
  annotations:
    # GKE HTTP(S) Load Balancer
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - host: kloudkitchen.immrbhattarai.tech   # For now, leave as placeholder.
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 4000
